--- a/meu_blog/blog/templates/blog/post_detail.html
+++ b/meu_blog/blog/templates/blog/post_detail.html
@@ -5,7 +5,7 @@
 {% block content %}
     <h2>{{ post.title }}</h2>
     {% if post.image %}
-        <img src="{{ post.image.url }}" alt="{{ post.title }}">
+    <img src="{{ post.image.url }}" alt="{{ post.title }}" style="max-width: 100%; height: auto;">
     {% endif %}
     <p>{{ post.date_posted|date:"d M Y H:i" }}</p>
     <div>{{ post.content|safe }}</div>
