Sistema de comentários implementado com usuario logado

--- a/meu_blog/blog/templates/blog/post_detail.html
+++ b/meu_blog/blog/templates/blog/post_detail.html
@@ -1,15 +1,34 @@
 {% extends 'base.html' %}
 
-{% block title %}{{ post.title }}{% endblock %}
+{% block title %}Detalhes do Post{% endblock %}
 
 {% block content %}
     <h2>{{ post.title }}</h2>
-    {% if post.image %}
-    <img src="{{ post.image.url }}" alt="{{ post.title }}" style="max-width: 100%; height: auto;">
+    <p>{{ post.content }}</p>
+    <p><small>Postado em {{ post.date_posted|date:"d M Y H:i" }}</small></p>
+
+    <hr>
+    <h3>Comentários</h3>
+    <ul>
+        {% for comment in comments %}
+            <li>
+                <strong>{{ comment.author }}</strong> disse:
+                <p>{{ comment.content }}</p>
+                <small>{{ comment.date_posted|date:"d M Y H:i" }}</small>
+            </li>
+        {% empty %}
+            <p>Nenhum comentário ainda. Seja o primeiro a comentar!</p>
+        {% endfor %}
+    </ul>
+
+    <hr>
+    {% if user.is_authenticated %}
+        <form method="POST">
+            {% csrf_token %}
+            <textarea name="content" rows="4" placeholder="Adicione um comentário..." required></textarea><br>
+            <button type="submit">Enviar</button>
+        </form>
+    {% else %}
+        <p><a href="{% url 'login' %}">Faça login</a> para comentar.</p>
     {% endif %}
-    <p>{{ post.date_posted|date:"d M Y H:i" }}</p>
-    <div>{{ post.content|safe }}</div>
-    <a href="{% url 'post-update' post.id %}">Editar</a>
-    <a href="{% url 'post-delete' post.id %}">Excluir</a>
-    <a href="{% url 'post-list' %}">Voltar</a>
 {% endblock %}
