--- a/meu_blog/templates/base.html
+++ b/meu_blog/templates/base.html
@@ -14,6 +14,7 @@
             <ul>
                 <li><a href="{% url 'post-list' %}">Home</a></li>
                 <li><a href="{% url 'post-create' %}">Criar Post</a></li>
+                <li><a href="{% url 'category-list' %}">Categorias</a></li>
             </ul>
         </nav>
     </header>
